--- a/slides/4_descritiva/slides_descritiva.qmd
+++ b/slides/4_descritiva/slides_descritiva.qmd
@@ -478,3 +478,84 @@ pinguins |>
 ```
 :::
 :::
+
+## Transformação de dados
+
+Em alguns casos, os dados podem apresentar distribuições muito distorcidas, o
+que pode afetar a validade dos testes estatísticos aplicados.
+
+. . .
+
+Para resolver esse problema, uma solução comum é aplicar uma transformação aos dados para deixá-los mais próximos de uma distribuição normal.
+
+. . .
+
+```{r plot-transformacao-de-dados}
+#| fig-align: "center"
+#| out.width: "70%"
+#| echo: false
+library(patchwork)
+set.seed(123)
+amostra <- rexp(10000)
+
+original <- ggplot(data.frame(x = amostra), aes(x)) +
+  geom_histogram(bins = 20, color = "black", fill = "lightblue") +
+  labs(title = "Distribuição Original", y = "", x = "") +
+  theme_minimal(base_size = 14, base_family = "Charter")
+
+amostra_log <- log10(amostra)
+
+logaritmo <- ggplot(data.frame(x = amostra_log), aes(x)) +
+  geom_histogram(bins = 20, color = "black", fill = "lightgreen") +
+  labs(title = "Transformação logarítmica", x = "", y = "") +
+  theme_minimal(base_size = 14, base_family = "Charter")
+
+amostra_sqrt <- sqrt(amostra)
+
+raiz_quadrada <- ggplot(data.frame(x = amostra_sqrt), aes(x)) +
+  geom_histogram(aes(y = ..density..), bins = 20, color = "black", fill = "darksalmon") +
+  labs(title = "Transformação raíz quadrada", x = "", y = "") +
+  theme_minimal(base_size = 14, base_family = "Charter")
+
+amostra_raiz_cubica <- amostra^(1/3)
+
+raiz_cubica <- ggplot(data.frame(x = amostra_raiz_cubica), aes(x)) +
+  geom_histogram(aes(y = ..density..), bins = 20, color = "black", fill = "aquamarine") +
+  labs(title = "Transformação raíz cúbica", x = "", y = "") +
+  theme_minimal(base_size = 14, base_family = "Charter")
+
+((original + logaritmo) / (raiz_quadrada + raiz_cubica)) +
+  plot_annotation(title = "Dados simulados de 10.000 observações",
+                  theme = theme(text = element_text(family = "Charter", size = 16)))
+```
+
+## Transformando a `massa_corporal`
+
+::: columns
+::: {.column width="50%"}
+```{r histograma-massa-corporal-dois}
+#| fig-align: "center"
+#| out.width: "100%"
+pinguins |>
+  ggplot(aes(x = massa_corporal)) +
+  geom_histogram(fill = "coral2") +
+  labs(x = "Massa corporal (em gramas)",
+       y = "Frequência") +
+  theme_bw(base_size = 16,
+           base_family = "Charter")
+```
+:::
+
+::: {.column width="50%"}
+```{r log-massa-corporal}
+pinguins |>
+  mutate(massa_log = log10(massa_corporal)) |>
+  ggplot(aes(x = massa_log)) +
+  geom_histogram(fill = "deepskyblue4") +
+  labs(x = "Log da massa corporal",
+       y = "Frequência") +
+  theme_bw(base_size = 16,
+           base_family = "Charter")
+```
+:::
+:::
