--- a/slides/4_descritiva/slides_descritiva.qmd
+++ b/slides/4_descritiva/slides_descritiva.qmd
@@ -610,7 +610,7 @@ pinguins |>
 pinguins |>
   tabyl(especie, ilha) |>
   adorn_totals(where = "row") |>
-  adorn_percentages(denominator = "row") |>
+  adorn_percentages(denominator = "col") |>
   adorn_pct_formatting(digits = 1)   
 ```
 
@@ -649,3 +649,20 @@ pinguins |>
 ![](../assets/tabyl_exportada.png){fig-align="center" width=50%}
 
 :::
+
+## Tarefa de casa
+
+* Para a tarefa de casa, vamos seguir usando a base `pinguins` do pacote `dados`.
+
+1. Filtre a base para manter apenas as observações do ano de 2009.
+2. Escolha uma variável contínua da base de dados e verifique se ela segue
+uma distribuição normal através de um histograma e um teste de normalidade
+de Shapiro-Wilk.
+3. Independentemente da distribuição, crie uma variável transformada (a partir
+da que você escolheu) através do
+método
+da raíz quadrada (função `sqrt()`),
+da raíz cúbica (lembre-se do operador `^`) ou
+do log (função `log10()`). Você também pode criar um histograma da variável
+transformada.
+  - Lembre-se da função `mutate()` para criar ou modificar colunas.
