Finalizar aula 5 de inferência. Finalizar correlação, alternativas não-paramétricas e tarefa de casa.

--- a/slides/5_inferencia/references.bib
+++ b/slides/5_inferencia/references.bib
@@ -11,3 +11,17 @@
     abstract =  {Generally, in psychology, the various statistical analyses are taught independently from each other. As a consequence, students struggle to learn new statistical analyses, in contexts that differ from their textbooks. This paper gives a short introduction to the general linear model (GLM), in which it is showed that ANOVA (one-way, factorial, repeated measure and analysis of covariance) is simply a multiple correlation/regression analysis (MCRA). Generalizations to other cases, such as multivariate and nonlinear analysis, are also discussed.  It can easily be shown that every popular linear analysis can be derived from understanding MCRA.},
     doi =       {10.20982/tqmp.04.2.p065}
 }
+
+@article{khamis_2008,
+	author = {Khamis, Harry},
+	title = {{Measures of Association: How to Choose?}},
+	journal = {Journal of Diagnostic Medical Sonography},
+	volume = {24},
+	number = {3},
+	pages = {155--162},
+	year = {2008},
+	month = mar,
+	issn = {8756-4793},
+	publisher = {SAGE Publications Inc STM},
+	doi = {10.1177/8756479308317006}
+}
