adicionar frase do estatístico George Box no início da aula de inferência

--- a/slides/5_inferencia/references.bib
+++ b/slides/5_inferencia/references.bib
@@ -25,3 +25,17 @@
 	publisher = {SAGE Publications Inc STM},
 	doi = {10.1177/8756479308317006}
 }
+
+@article{box_1976,
+	author = {Box, George E. P.},
+	title = {{Science and Statistics}},
+	journal = {J. Am. Stat. Assoc.},
+	volume = {71},
+	number = {356},
+	pages = {791--799},
+	year = {1976},
+	month = dec,
+	issn = {0162-1459},
+	publisher = {Taylor {\&} Francis},
+	doi = {10.1080/01621459.1976.10480949}
+}
